# clc3-rag-tracing

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  astradb-secret.yaml  configmap.yaml  create_pipeline.ipynb  curl.txt  dockerfile  fastapi-deployment.yaml  hayhooks-pod-with-pipelines.yml  haystack-deployment.yaml  haystack-service.yaml  haystack-service.yml  hello.py  jaeger-deployment.yaml  main.py  namespace.yaml  ollama-deployment.yaml  pyproject.toml  requirements.txt  run.sh  sample_app.py  secrets.yaml
backend/: api.py
pipelines/: weav_test_pipeline.yml
src/backend/: api.py
